syntax = "proto3";

option csharp_namespace = "Logistic.Status.Proto";

package passManager;

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

service TerminateStatusService {
  rpc SendTerminateStatus (SendStatusRequest) returns (SendStatusResponse);
}

message SendStatusRequest{
  OrderStatus order_status = 1;
  string message = 2;
  int64 order_id = 3;
  google.protobuf.Timestamp time_to_send = 4;
}

message SendStatusResponse{
  
}

enum OrderStatus {
    Prepared = 0;
    Created = 1;
    InProgress = 2;
    Rejected = 3;
    Completed = 4;
    Closed = 5;
    Expired = 6;
}